# dtu_mlops

./: trace.json
.dvc/: config
BUG/: my_logger.py  output.out  output.prof  profiling.py  vae_mnist_bugs.py  vae_mnist_working.py
MyProject/: Makefile  README.md  pyproject.toml
MyProject/MyProject/: __init__.py
MyProject/MyProject/data/: make_dataset.py
MyProject/docs/: mkdocs.yaml
MyProject/docs/source/: index.md
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb
s1_development_environment/exercise_files/final_exercise/: main.py
